@@ -67,13 +67,13 @@ class HTMLCacheUpdate
 					break;
 				}
 			}
-			if ( $id !== false ) {
-				// One less on the end to avoid duplicating the boundary
-				$job = new HTMLCacheUpdateJob( $this->mTitle, $this->mTable, $start, $id - 1 );
-			} else {
-				$job = new HTMLCacheUpdateJob( $this->mTitle, $this->mTable, $start, false );
-			}
-			$jobs[] = $job;
+			
+			$params = array(
+				'table' => $this->mTable,
+				'start' => $start,
+				'end' => ( $id !== false ? $id - 1 : false ),
+			);
+			$jobs[] = new HTMLCacheUpdateJob( $this->mTitle, $params );
 
 			$start = $id;
 		} while ( $start );
@@ -193,20 +193,14 @@ class HTMLCacheUpdateJob extends Job {
 	/**
 	 * Construct a job
 	 * @param Title $title The title linked to
-	 * @param string $table The name of the link table.
-	 * @param integer $start Beginning page_id or false for open interval
-	 * @param integer $end End page_id or false for open interval
+	 * @param array $params Job parameters (table, start and end page_ids)
 	 * @param integer $id job_id
 	 */
-	function __construct( $title, $table, $start, $end, $id = 0 ) {
-		$params = array(
-			'table' => $table, 
-			'start' => $start, 
-			'end' => $end );
+	function __construct( $title, $params, $id = 0 ) {
 		parent::__construct( 'htmlCacheUpdate', $title, $params, $id );
-		$this->table = $table;
-		$this->start = intval( $start );
-		$this->end = intval( $end );
+		$this->table = $params['table'];
+		$this->start = $params['start'];
+		$this->end = $params['end'];
 	}
 
 	function run() {
